libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_wait_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_upload_image_file(uint64_t ptr, RustBuffer namespace, RustBuffer name, RustBuffer contents
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_update_pool(uint64_t ptr, RustBuffer pool
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_service_request(uint64_t ptr, RustBuffer sandbox, RustBuffer service, RustBuffer path, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_service_websocket_url(uint64_t ptr, RustBuffer sandbox, RustBuffer service, RustBuffer path
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_update_template(uint64_t ptr, RustBuffer template
);
uint64_t uniffi_cyclops_sdk_fn_method_httpclient_execute(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopscredentials_new(RustBuffer client_id, RustBuffer client_secret, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopstokenproviderconfigurationbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_base_url(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_httprequestbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_body(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_httprequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_headers(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_max_response_bytes(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_method(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_timeout_secs(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_url(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_templatebuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_api_version(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_templatebuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_kind(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_metadata(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_cyclops_sdk_checksum_func_fleet_label_key(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_healthy_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_removed_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_terminating_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_unknown_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_accesstokenprovider_get_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_labels(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_expires_in_seconds(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_label(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_sandbox(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createclaimrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createpoolrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createsignedserviceurlrequestbuilder_new(void

);
uint32_t ffi_cyclops_sdk_uniffi_contract_version(void

);